--- a/app/components/sidebar/sidebar.scss
+++ b/app/components/sidebar/sidebar.scss
@@ -14,6 +14,10 @@
     transition: 0.3s
 }
 
+.sidebar a.active {
+    color: blue
+}
+
 .sidebar a:hover, .offcanvas a:focus{
     color: #f1f1f1;
 }
