--- a/app/components/header/header.scss
+++ b/app/components/header/header.scss
@@ -18,10 +18,22 @@
 .navbar-right {
 display:block;
 }
+
+
+
+
 .navbar {
   background: none;
   outline:none;
+  position: absolute;
+  height:10vh;
+  width:100%;
+  top:0;
 }
+
+
+
+
 .glyphicon-triangle-bottom {
     font-size: 10px;
     padding-left: 3px;
@@ -44,7 +56,7 @@ display:block;
   background-color: #f1f1f1;
 }
 .DropDownMenuItem {
-  margin-top:-20px;
+    margin-top:-20px;
     position: absolute;
     right: 0;
     background-color: #f9f9f9;
@@ -63,3 +75,6 @@ display:block;
 }
 
 .DropDownMenuItem a:hover {background-color: #f1f1f1}
+.material-icons {
+ cursor:pointer;
+}
