added notification and search box

--- a/app/components/content/content.intern.scss
+++ b/app/components/content/content.intern.scss
@@ -1,7 +1,8 @@
-@import '../../style/color.scss';
+@import '../../style/color.intern.scss';
 
 .intern {
     .content {
-        background-color:rgb(236,240,241);
+         background-color:rgb(236,240,241);
+        
     }
 }
