--- a/app/components/content/content.scss
+++ b/app/components/content/content.scss
@@ -12,5 +12,7 @@
             height:100%;
             display:block;
             width:100%;
+            padding-left:10px;
+            padding-right:10px;
             }
     }
