--- a/app/components/header/dropdown/notificationDropdown.scss
+++ b/app/components/header/dropdown/notificationDropdown.scss
@@ -1,4 +1,4 @@
-.DropDownMenuItem:before{
+.NotificationDropDown:before{
         content:"";
         width: 0;
         height: 0;
@@ -11,10 +11,10 @@
         border-right: 7px solid transparent; 
     }
 
-    .DropDownMenuItem {
+    .NotificationDropDown {
         margin-top: 6vh;
         min-width: 140px;
-        right:1px;
+        right:100px;
         background: #f9f9f9;
         position: absolute;
         box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
