--- a/app/components/sidebar/sidebar.scss
+++ b/app/components/sidebar/sidebar.scss
@@ -1,21 +1,18 @@
+@import './sidebar.intern.scss';
+@import './sidebar.jobby.scss';
+
+
 .sidebar  {
-            background-color: rgb(43,63,79);
             position:relative;
             height:100%;
-            color:white;
             width:200px;
             display:block;
             a {
                 padding: 8px 8px 8px 32px;
                 text-decoration: none;
                 font-size: 15px;
-                color: #818181;
                 display: block;
                 transition: 0.3s
-            }
-
-            a:hover, .offcanvas a:focus{
-                color: #f1f1f1;
             }
 
         }
