--- a/app/style/color.scss
+++ b/app/style/color.scss
@@ -6,10 +6,12 @@ $teal7: #00796b;
 $teal6: #00897b;
 $teal5: #009688;
 $teal50 : #E0F2F1;
+$body_background: rgb(236, 240, 241);
 
 //Text colors
 $white: white;
 $black: black;
+$text: #889eae;
 
 
 
