--- a/app/components/sidebar/sidebar.scss
+++ b/app/components/sidebar/sidebar.scss
@@ -8,14 +8,25 @@
             width:200px;
             display:block;
             a {
-                padding: 8px 8px 8px 32px;
+                padding: 10px 8px 10px 16px;
                 text-decoration: none;
-                font-size: 15px;
+                font-size: 18px;
                 display: block;
-                transition: 0.3s
+                transition: 0.3s;
             }
-
+              i {
+                   float:right;
+                }
+          .divider {
+                height: 1px;
+                width:100%;
+                display:block; /* for use on default inline elements like span */
+                margin: 0;
+                overflow: hidden;
+                background-color: rgb(255, 165, 0);
+            }
         }
+
 
 
 
