--- a/src/header/header.intern.css
+++ b/src/header/header.intern.css
@@ -1,14 +1,12 @@
 /*************** primary colors  **************/
 /*************** primary colors End **************/
 .intern .navbar {
-  background-color: #009688;
-  color: white; }
+  background-color: #009688; }
   .intern .navbar .navbar-brand {
     color: white; }
-  .intern .navbar .userProfile .user .drop :hover {
-    color: black; }
-  .intern .navbar .userProfile .user .drop :active {
-    color: black; }
+
+.intern .badge1 .material-icons {
+  color: white; }
 
 .intern .badge1 :hover {
   color: black; }
@@ -17,6 +15,9 @@
   background: green;
   color: white;
   box-shadow: 0 0 1px #333; }
+
+.intern .badge2 .material-icons {
+  color: white; }
 
 .intern .badge2 :hover {
   color: black; }
