sidehar show/hide and updated readme

--- a/src/body/body.intern.scss
+++ b/src/body/body.intern.scss
@@ -1,4 +1,5 @@
-@import '../../style/color.scss';
+
+@import '../style/color.scss';
 .intern {
     .body {
          background-color:$body_background;
