--- a/src/body/content/content.css
+++ b/src/body/content/content.css
@@ -1,7 +1,8 @@
 .content {
-  position: relative;
   height: 100%;
   display: block;
   width: 100%;
   padding-left: 10px;
-  padding-right: 10px; }
+  padding-right: 10px;
+  margin-left: 200px;
+  transition: margin-left .5s; }
