--- a/src/body/content/content.scss
+++ b/src/body/content/content.scss
@@ -1,9 +1,10 @@
 
         .content {
-            position:relative;
             height:100%;
             display:block;
             width:100%;
             padding-left:10px;
             padding-right:10px;
+            margin-left: 200px;
+            transition: margin-left .5s;
             }
