--- a/src/body/sidebar/sidebar.scss
+++ b/src/body/sidebar/sidebar.scss
@@ -4,7 +4,8 @@
 
 .sidebar  {
          position:fixed;
-            height:90%;
+            top:40px;
+            bottom:40px;
             width:200px;
             overflow-x: hidden;
             display:block;
