--- a/src/Profile.scss
+++ b/src/Profile.scss
@@ -8,7 +8,7 @@
 
 .profile-h3{
   text-align: center;
-  font-weight:200;
+  font-weight:400;
 }
 
 .profile-inner{
@@ -27,4 +27,12 @@
 
 .profile-btn{
   margin-top:10px;
+}
+
+
+.profile-image{
+  width:20%;
+  border-radius: 50px;
+  border: 2px solid #e3e3e3;
+  padding:4px;
 }
