--- a/src/body/content/content.scss
+++ b/src/body/content/content.scss
@@ -7,4 +7,5 @@
             padding-right:10px;
             margin-left: 200px;
             transition: margin-left .5s;
+            z-index:-1;
             }
