--- a/src/body/body.scss
+++ b/src/body/body.scss
@@ -2,7 +2,9 @@
 .body {
         position:absolute;
         width:100%;
-        top:40px;
+        top:60px;
         bottom:40px;
         display: flex;   
+        z-index:-1;
+        left:0;
     }
