--- a/src/header/header.intern.css
+++ b/src/header/header.intern.css
@@ -1,31 +1,15 @@
 /*************** primary colors  **************/
 /*************** primary colors End **************/
 .intern .navbar {
-  background-color: #009688; }
-  .intern .navbar .navbar-brand {
-    color: white; }
-
-.intern .badge1 .material-icons {
+  background-color: #009688;
   color: white; }
 
-.intern .badge1 :hover {
-  color: black; }
-
-.intern .badge1[data-badge]:after {
-  background: green;
-  color: white;
-  box-shadow: 0 0 1px #333; }
-
-.intern .badge2 .material-icons {
+.intern .navbar .navbar-right .userProfile {
+  background-color: inherit;
   color: white; }
 
-.intern .badge2 :hover {
-  color: black; }
+.intern .navbar .navbar-right .userProfile:hover {
+  background-color: #00897b; }
 
-.intern .badge2 :active {
-  color: black; }
-
-.intern .badge2[data-badge]:after {
-  background: green;
-  color: white;
-  box-shadow: 0 0 1px #333; }
+.intern .navbar .navbar-right .userProfile:active {
+  background-color: #00897b; }
