added icon to account and logout

--- a/src/header/dropdown/dropdown.intern.css
+++ b/src/header/dropdown/dropdown.intern.css
@@ -6,5 +6,9 @@
     border-top: 1px solid #00796b; }
   .intern .dropdown li:hover {
     background-color: #00897b; }
+  .intern .dropdown li:active {
+    background-color: #00897b; }
+  .intern .dropdown li:visited {
+    background-color: #00897b; }
   .intern .dropdown li a {
     color: white; }
