--- a/src/header/header.intern.css
+++ b/src/header/header.intern.css
@@ -4,12 +4,12 @@
   background-color: #009688;
   color: white; }
 
-.intern .navbar .navbar-right .userProfile {
+.intern .navbar .navbar-right .userProfile, .intern .navbar .navbar-right .userProfileActive {
   background-color: inherit;
   color: white; }
 
-.intern .navbar .navbar-right .userProfile:hover {
+.intern .navbar .navbar-right .userProfile:hover, .intern .navbar .navbar-right .userProfileActive:hover {
   background-color: #00897b; }
 
-.intern .navbar .navbar-right .userProfile:active {
+.intern .navbar .navbar-right .userProfileActive {
   background-color: #00897b; }
