--- a/src/header/dropdown/dropdown.css
+++ b/src/header/dropdown/dropdown.css
@@ -9,6 +9,12 @@
 .intern .dropdown li:hover {
   background-color: #00897b; }
 
+.intern .dropdown li:active {
+  background-color: #00897b; }
+
+.intern .dropdown li:visited {
+  background-color: #00897b; }
+
 .intern .dropdown li a {
   color: white; }
 
@@ -29,6 +35,7 @@
   padding: 0; }
 
 .dropdown li {
+  cursor: pointer;
   padding: 12px 16px;
   list-style: none;
   display: block; }
