--- a/src/header/dropdown/dropdown.intern.scss
+++ b/src/header/dropdown/dropdown.intern.scss
@@ -3,10 +3,16 @@
     .dropdown {
         background-color: $teal5;
         hr {
-            border-top:1px solid $teal7;
+            border-top: 1px solid $teal7;
         }
         li {
             &:hover {
+                background-color: $teal6;
+            }
+            &:active {
+                background-color: $teal6;
+            }
+            &:visited {
                 background-color: $teal6;
             }
             a {
