--- a/src/header/dropdown/dropdown.scss
+++ b/src/header/dropdown/dropdown.scss
@@ -15,6 +15,7 @@
         padding: 0;
     }
     li {
+        cursor:pointer;
         padding: 12px 16px;
         list-style: none;
         display: block;
