--- a/src/header/header.scss
+++ b/src/header/header.scss
@@ -50,5 +50,8 @@
                  }
              }
          }
+         .userProfileActive {
+             @extend .userProfile;
+         }
      }
  }
