--- a/src/body/sidebar/sidebar.css
+++ b/src/body/sidebar/sidebar.css
@@ -8,29 +8,41 @@
   overflow-x: hidden;
   display: block;
   transition: 0.5s; }
-  .sidebar a {
-    padding: 10px 8px 10px 16px;
-    text-decoration: none;
-    font-size: 18px;
-    display: block;
-    transition: 0.3s; }
-  .sidebar i {
-    float: right; }
-  .sidebar .arrow {
-    float: left;
-    padding-left: 4px; }
-  .sidebar .subMenu {
-    list-style: none;
-    color: black; }
-    .sidebar .subMenu a {
-      font-size: 12px; }
-      .sidebar .subMenu a :hover {
-        color: white; }
-  .sidebar .divider {
-    height: 1px;
-    width: 100%;
-    display: block;
-    /* for use on default inline elements like span */
-    margin: 0;
-    overflow: hidden;
-    background-color: orange; }
+
+.sidebar a {
+  padding: 10px 8px 10px 16px;
+  text-decoration: none;
+  font-size: 18px;
+  display: block;
+  transition: 0.3s; }
+
+.sidebar i {
+  float: right; }
+
+.sidebar .arrow {
+  float: left;
+  padding-left: 4px; }
+
+.sidebar .subMenu {
+  list-style: none;
+  color: black; }
+
+.sidebar .subMenu a {
+  font-size: 12px; }
+
+.sidebar .subMenu a :hover {
+  color: white; }
+
+.sidebar .divider {
+  height: 1px;
+  width: 100%;
+  display: block;
+  /* for use on default inline elements like span */
+  margin: 0;
+  overflow: hidden;
+  background-color: orange; }
+
+/*  for small devices */
+@media screen and (max-width: 415px) {
+  .sidebar {
+    width: 0px; } }
