--- a/src/header/dropdown/dropdown.scss
+++ b/src/header/dropdown/dropdown.scss
@@ -4,18 +4,19 @@
     top: 60px;
     right: 50px;
     display: none;
-    min-width: 174px;
+    min-width: 175px !important;
+    max-width: 175px !important;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
     hr {
         display: block;
         height: 1px;
-        border: 0;  
+        border: 0;
         margin: 0;
         padding: 0;
     }
     li {
-        cursor:pointer;
+        cursor: pointer;
         padding: 12px 16px;
         list-style: none;
         display: block;
