--- a/src/header/header.scss
+++ b/src/header/header.scss
@@ -1,5 +1,5 @@
  @import './header.intern.css';
-
+ 
  .navbar {
      background: none;
      outline: none;
@@ -8,15 +8,15 @@
      width: 100%;
      top: 0;
      border-radius: 0;
-     overflow-x:hidden;
-     left:0;
-     z-index:999;
+     overflow-x: hidden;
+     left: 0;
+     z-index: 999;
      .navbar-brand {
-         height:inherit;
+         height: inherit;
          .material-icons {
              cursor: pointer;
-             margin-left:20px;
-             margin-right:30px;
+             margin-left: 20px;
+             margin-right: 30px;
          }
          .logo {
              text-transform: uppercase;
@@ -27,13 +27,12 @@
          float: right;
          height: 60px;
          margin-right: 50px;
-         margin-top:-60px;
+         margin-top: -60px;
          .userProfile {
-             height:inherit;
-             width:inherit;
-             //padding-bottom: 20px;
+             height: inherit;
+             min-width: 175px !important;
+             max-width: 175px !important; //padding-bottom: 20px;
              padding-left: 15px;
-             min-width: 70px;
              outline: none;
              border: none;
              display: inline-block;
@@ -55,3 +54,4 @@
          }
      }
  }
+ /*  for small devices */
