--- a/src/header/header.css
+++ b/src/header/header.css
@@ -38,7 +38,8 @@
   border: none;
   display: inline-block;
   cursor: pointer;
-  text-decoration: none; }
+  text-decoration: none;
+  font-size: 12px; }
 
 .navbar .navbar-right .userProfile .userImage, .navbar .navbar-right .userProfileActive .userImage {
   height: 30px;
