--- a/src/header/header.scss
+++ b/src/header/header.scss
@@ -38,6 +38,7 @@
              display: inline-block;
              cursor: pointer;
              text-decoration: none;
+             font-size: 12px;
              .userImage {
                  height: 30px;
                  width: 30px;
